# rtweekend

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt  camera.c  color.c  hittable.c  main.c  ray.c  sphere.c
include/raytracer/: camera.h  color.h  hittable.h  hittable_list.h  interval.h  ray.h  raytracer.h  sphere.h  vec3.h
src/: CMakeLists.txt  camera.c  color.c  hittable.c  hittable_list.c  ray.c  sphere.c  vec3.c
tests/: CMakeLists.txt  test.c
